server/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: hotswap-server
        image: hotswap-server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-vol
          mountPath: /etc/secrets
      volumes:
        - name: config-vol
          configMap:
            name: config-map-test
            items:
              - key: my_secret
                path: my_secret
