server/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
